# OpenCL-ICD-Loader

./: .appveyor.yml  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Makefile  OpenCL.def  OpenCL.pc.in  OpenCL.rc  README.md  README.txt  appveyor.yml  build_using_cmake.bat  build_using_vs2017.bat  conanfile.py  flake.nix  icd.c  icd.h  icd_dispatch.c  icd_dispatch.h  icd_envvar.c  icd_envvar.h  icd_exports.map  icd_linux.c  icd_linux_envvar.c  icd_windows.c  icd_windows_dxgk.c  icd_windows_dxgk.h  icd_windows_envvar.c  icd_windows_hkr.c  icd_windows_hkr.h
.github/workflows/: cmake.yml  linux.yml  macos.yml  presubmit.yml  release.yml  windows.yml
.gitlab/: stream-ci.yaml
.travis/: install.sh
build-qnx/: Makefile
build-qnx/driver_stub/: common.mk
build-qnx/icd/: common.mk  icd_cmake_config.h
build-qnx/icd_loader_test/: common.mk  icd_loader_test.use
build-qnx/layer/: common.mk
cmake/: DebSourcePkg.cmake  OpenCLConfig.cmake  Package.cmake  PackageSetup.cmake
inc/: README.txt
include/: cl_icd_layer.h  cl_khr_icd2.h
loader/: CMakeLists.txt  OpenCL.pc.in  cl_icdl.h  cl_plugin_loader_test.c  cllayerinfo.c  icd.c  icd.h  icd_device_visible.c  icd_device_visible.h  icd_dispatch.c  icd_dispatch.h  icd_dispatch_generated.c  icd_envvars.h  icd_layer.h  icd_library.h  icd_platform.h  icd_trace.c  icd_trace.h  icd_version.h
loader/linux/: CMakeLists.txt  icd_exports.map  icd_exports.map.in  icd_linux.c  icd_linux_envvars.c  icd_linux_library.c
loader/windows/: CMakeLists.txt  OpenCL-mingw-i686.def  OpenCL.def  OpenCL.def.in  OpenCL.rc  adapter.h  icd_windows.c  icd_windows.h  icd_windows_apppackage.c  icd_windows_apppackage.cpp  icd_windows_apppackage.h  icd_windows_dxgk.c  icd_windows_dxgk.h  icd_windows_envvars.c  icd_windows_formats.h  icd_windows_hkr.c  icd_windows_hkr.h  icd_windows_library.c
scripts/: .gitignore  README.md  dispatch_table.mako  gen_loader.py  gen_print_layer.py  icd_dispatch_generated.c.mako  icd_print_layer_generated.c.mako
test/: CMakeLists.txt
test/driver_stub/: CMakeLists.txt  cl.c  cl_ext.c  cl_gl.c  driver_stub.def  icd.c  icd_structs.h  rename_api.h
test/inc/platform/: icd_test_log.h
test/layer/: CMakeLists.txt  icd_print_layer.c  icd_print_layer.def  icd_print_layer.h  icd_print_layer.map  icd_print_layer_generated.c
test/loader_test/: CMakeLists.txt  callbacks.c  icd_test_match.c  main.c  param_struct.h  test_buffer_object.c  test_cl_runtime.c  test_clgl.c  test_create_calls.c  test_image_objects.c  test_kernel.c  test_platforms.c  test_program_objects.c  test_sampler_objects.c
test/log/: CMakeLists.txt  icd_test_log.c
test/pkgconfig/: pkgconfig.c
test/pkgconfig/bare/: CMakeLists.txt
test/pkgconfig/pkgconfig/: CMakeLists.txt
test/pkgconfig/sdk/: CMakeLists.txt
test/platform/: icd_test_log.c
test/plugin_test/: CLPlugin-mingw-i686.def  CLPlugin.def  CMakeLists.txt  cl_plugin.c  cl_plugin.h  cl_plugin_loader_test.c
test_package/: conanfile.py  example.c
